--- a/memoryCards.html
+++ b/memoryCards.html
@@ -13,11 +13,7 @@
   <body>
     <a href="javascript:void(0);"><h1 id="start" onclick="startGame();">Start playing!</h1></a>
     <div id="playground" class="board"></div>
-    <div id="result" class="counter">      
-        <!-- <h2>It's great! <br> Your result</h2>
-        <p>Attempts: 10 <br> Time: 1 min 20 s</p>
-        <div>Try again!</div>       -->
-    </div>
+    <div id="result" class="counter"></div>
     <script src="scripts/scripts-memoryGame.js"></script>
   </body>
 </html>
